@@ -6,6 +6,9 @@
 - added: `controller.$hook(name, [helper], callback)`
 - added: `String.parseInt2()` the method searchs number and converts it to integer
 - added: `String.parseFloat2()` the method searchs number and converts it to float
+- added: `@{title2('this content will be added to end of current title')}`
+- added: `String.parseInt2()` the method searchs number and converts it to integer
+- added: `String.parseFloat2()` the method searchs number and converts it to float
 
 - fixed: `controller.memorize()` threw a timeout when the action contains some error in the memorize scope
 - fixed: `TRY()`
